# handoffkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
apps/: README.md
docs/: API_STABILITY.md  COMPATIBILITY.md  CONTEXT_SOUP_VS_CONTRACT_HANDOFFS.md  MAI_STYLE_DOCTOR_BENCHMARK.md  MEDIA_WORKFLOWS.md  PROVIDERS.md  PUBLIC_API.md  README.md  RELEASE_PROCESS.md  ROAD_TO_1_0.md  SHOWCASE_GALLERY.md
examples/: coding_team.py  doctor_benchmark.py  doctor_orchestrator.py  extension_demo.py  fake_provider_tool_call_demo.py  freemodel_coding_team.py  freemodel_openai_compatible.py  fusion_style_demo.py  handoff_demo.py  handoff_quality_demo.py  mai_clinical_mimo_benchmark.py  mai_style_doctor_benchmark.py  media_dubbing_demo.py  medical_tools_demo.py  memory_demo.py  ollama_agent.py  openai_agents_sdk_integration.py  opencode_go_agent.py  opencode_zen_agent.py  project_context_demo.py  provider_matrix_demo.py  provider_tool_adapter_demo.py  provider_tool_formats_demo.py  pydantic_ai_integration.py  real_task_calculator.py  replay_demo.py  repo_inspired_protocols.py  research_workflow.py  simple_agent.py  structured_recipe_demo.py  support_escalation.py  tool_agent.py  tool_execution_demo.py  tool_schema_demo.py
handoffkit/: __init__.py  agent.py  cli.py  context.py  doctor_cases_30.py  errors.py  fusion.py  handoff.py  memory.py  protocol.py  provider_adapters.py  quality.py  recipes.py  replay.py  reports.py  runner.py  showcases.py  structured.py  templates.py  tool.py  validation.py
reports/: clinical_benchmark_400_summary.json  clinical_benchmark_400_summary.md  coding_review.json  coding_review.md  contract_validation_demo.md  doctor_orchestrator.json  fusion_style_demo.json  handoff_quality_demo.json  handoff_quality_demo.md  provider_matrix_demo.json  provider_tool_adapter_demo.json  provider_tool_adapter_demo.md  provider_tool_formats_demo.json  provider_tool_formats_demo.md  real_task_calculator.json  real_task_calculator.md  replay_demo.md  research_workflow.json  research_workflow.md  structured_output_demo.json  structured_recipe_demo.json  support_escalation.json  tool_execution_demo.json  tool_execution_demo.md  trace_demo.json
scripts/: audit_clinical_benchmark.py  build_doctor_cases_100.py
tests/: test_adoption_docs.py  test_agent.py  test_api_stability.py  test_cli.py  test_cli_doctor.py  test_clinical_benchmark_audit.py  test_clinical_ensemble_benchmark.py  test_clinical_targeted_rescue.py  test_contract_validation.py  test_docs_090.py  test_handoff.py  test_imports.py  test_json_schemas.py  test_mai_benchmark.py  test_media.py  test_memory_context.py  test_ollama_provider_mock.py  test_openai_model_selection.py  test_openai_provider_mock.py  test_opencode_provider_mock.py  test_protocols.py  test_provider_adapters.py  test_provider_matrix.py  test_provider_registry.py  test_public_api_compatibility.py  test_quality.py  test_real_task_demo.py  (+11 more)
(+137 files in other folders)
